# rsysfetch

./: Cargo.toml  README.md
src/: app.rs  logo.rs  main.rs  system_info.rs  ui.rs
