[package]
name = "rsysfetch"
version = "0.1.0"
edition = "2024"
description = "Yet another system information command tool simply implemented in Rust🦀 with ratatui."
authors = ["Stepfen Shawn"]
license = "MIT"

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
sysinfo = "0.30"
local-ip-address = "0.5"